# ChickenOS

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  LOF  README  Readme.md  TODO  bochsrc.txt  bochsrold  build.rs  compile.sh  do.sh  floppy.img  frotz  grub.cfg  i386-unknown-chicken-gnu.json  init  initrd  link.sh  loader.s  log  lorem  menu.lst  new_update.sh  pad2  qemu-console.sh  qemu.sh  run_bochs.sh  rusty-tags.vi  sh  test.c  tree  update_image.sh
cross/: .config  .config.2  .config.old  config
cross/config.gen/: arch.in  libc.in
cruft/: initrd
disk/: args  busybox  fork  hello  ioctl
mnt/: init  kernel
scripts/: bochsrc.txt  grub.cfg  run_bochs.sh
src/: .gitignore  .ycm_extra_conf.py  FIXMES  LOF  Makefile  Makefile.arm  Makefile.rust  Makefile.u  Session.vim  console.c  debug.h  flags  gdt.c  hw.c  i386-defs.h  interrupt.c  intr-core.s  kbd.c  kernel.c  kmain.c  lib.rs  link.sh  linker.ld  loader.s  lorem  new.sh  qemu.sh  sh.c  specs  switch.s  syscall.c  syscall.h  tags  test.sh  thread.c  timer.c  todo.py  types_c.taghl  types_py.taghl  vm.c
src/arch/: address.rs  arch.md  boot.rs  i386.json  mod.rs
src/arch/aarch64/: CMakeLists.txt  aarch64_defs.h  boot.c  entry.s  hw.c  interrupt.c  linker.ld  paging.c  serial.c  serial.h  thread.c  time.c
src/arch/aarch64/include/: _common.h  _interrupt.h  _registers.h  _syscall.h
src/arch/aarch64/include/bits/: stat.h
src/arch/arm/: interrupt.c  linker.ld  loader.s  mod.rs
src/arch/arm/include/: common.h  interrupt.h  syscall.h
src/arch/i386/: CMakeLists.txt  __moddi3.c  __moddi3.s  arch.s  entry.S  entry.s  gdt.c  hw.c  i386_defs.h  interrupt.c  intr-core.s  kbd.c  linker.ld  loader.s  moddi3.s.bak  multiboot.c  paging.c  pic.c  real.s.bak  serial.c  switch.S  switch.s  syscall.c  thread.c  time.c  tss.c
src/arch/i386/include/: _common.h  _interrupt.h  _registers.h
src/arch/x86/: io.rs  mod.rs  multiboot.rs  serial.rs
src/arch/x86/i386/: boot.rs  linker.ld  mod.rs
src/arch/x86_64/: CMakeLists.txt
src/arch/x86_64/include/: _common.h  _interrupt.h  pic.h
src/arch/x86_64/include/bits/: alltypes.h
src/device/: ata.c  audio.c  chardevs.c  console.c  device.c  hw.c  input.c  interrupt.c  intr-core.s  ioport.c  kbd.c  log.c  mod.rs  pci.c  ps2.c  serial.c  time.c  timer.c  tty.c  tty_debug.c  video.c
src/device/audio/: TODO
src/device/block/: ata.c  ata_util.c  ramdisk.c
src/device/block/ata/: ata.c  ata_dma.c  ata_util.c
src/device/block/scsi/: util.c
src/device/character/: chardevs.c  tty.c  tty_debug.c
src/device/input/: ps2.c
src/device/net/: e1000.c  pcnet.c  rtl8139.c  rtl8139.h
src/device/soc/: mod.rs
src/device/usb/: uhci.c  usb.c
src/device/video/: bochs_vga.c  font.c  framebuffer.c  old_vga.c  vga.c
src/fs/: Makefile  ReadMe  TODO  a.out  device.c  dirent.c  ext2fs.c  ext2fs.h  ext2fs2.c  ext2fs_defs.h  fat.c  fs.c  icache.c  initrd.c  initrd.h  kernel_inode  list.tgz  namei.c  ops.c  poll_select.c  vfs  vfs.c  vfs.h  vfs_ops.c  vfs_util.c
src/fs/ext2/: a.out  ext2.c  ext2_debug.c  ext2_ops.c  ext2_util.c  ext2fs_defs.h  home.ino  ops.c  temp.c  temp.c.bak
src/fs/ext2/old/: a.out  ext2-3.c  ext2fs.h  ext2fs2.c  stati 2
src/fs/fat/: 622C.IMG  a.out  backup.img  fat.c  fat.c.bak  fat.h
src/fs/fat/fp/: AUTOEXEC.BAT  C.BAT  CD1.SYS  CD2.SYS  CD3.SYS  CONFIG.SYS  EDIT.INI  MOUSE.@@@  MOUSE.SYS  README.1ST
src/fs/syscalls/: unix.c
src/include/: assert.h  ctype.h  device.h  endian.h  errno.h  font2.h  kernel.h  multiboot.h  multiboot.h.old  old_elf.h  poll.h  queue.h  sched.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  sys.h  types.h  vincent.h
src/include/arch/i386/: common.h  idt.h  interrupt.h
src/include/chicken/: bcache.h  bitmap.h  boot.h  common.h  init.h  interrupt.h  memory.h  synch.h  thread.h  time.h  vbe.h
src/include/common/: i386-defs.h
src/include/device/: ata.h  console.h  input.h  pci.h  tty.h  usb.h  video.h
src/include/fs/: dentry.h  device.h  icache.h  initrd.h  vfs.h  vfs_ops.h
src/include/kernel/: bitmap.h  common.h  console.h  hash_function.h  hash_table.h  hw.h  interrupt.h  list.h  memory.h  serial.h  test.c.bak  thread.h  timer.h  types.h  vm.h  vm_defs.h
src/include/mm/: liballoc.h  liballoc.h.old  paging.h  vm.h  vm_defs.h
src/include/net/: dhcp.h  net_core.h
src/include/sys/: dirent.h  siginfo.h  signal.h  socket.h  stat.h  time.h  types.h
src/include/thread/: more  synchro.h  syscall-names.h  syscall-names2.h  syscall-names3.h  syscall.h
src/init/: a.out  init.c  kmain.c  linker.ld  loader.s  multiboot.c  util.c
src/lib/: ctype.c  kprintf.c  libc.c  memory.c  newvsprintf.c  newvsprintf.c.nocompile  oprintf.c.v  stdio.c  stdlib.c  string.c  sys.c  tree.c  vsprintf.c
src/lib/kernel/: memory.c
src/misc/: console.c  log.c  uname.c
src/mm/: bcache.c  frame.c  gdt.c  liballoc.c  liballoc_funcs.c  mm.c  mm_ops.c  paging.c  palloc.c  regions.c  vm.c
src/net/: arp.c  dhcp.c  dns.c  ethernet.c  icmp.c  ip.c  net_core.c  socket.c  tcp.c  udp.c
src/rme/: rme.c  rme.h
src/stash/: old_scrolling_tty.c.bak
src/thread/: clone.c  exec.c  fork.c  futex.c  load_elf.c  scheduler.c  signal.c  signal.old  synchro.c  syscall.c  thread.c  thread_ops.c  thread_util.c  tss.c  v8086.c  wait.c
src/thread/exec/: elf.c  elf_util.c  exec.c  exec_util.c
src/thread/signals/: set.c
usrsrc/: .gitignore  Makefile  README  a.c  a.out  binutils.2.19.patch  binutils.patch  build.sh  cross.sh  e3c  forktest  gcc.patch  hello.c  init  newlib.patch  rebuild-newlib.sh  shell.c  test  test.c  tsh.c  user.ld
usrsrc/newlib-files/: crt0.c  sys  syscall.h  syscalls.c  vanilla-syscalls.c
usrsrc/newlib-files/machine/: limits.h
usrsrc/newlib-files/sys/: _types.h  ioctls.h  poll.h
usrsrc/old/: a.out  crt0.S  hello.c  syscalls.c  tsh.c  types.h  vi.c
usrsrc/old/old/: stdio.c  stdio.h  string.c  string.h
usrsrc/tests/: Makefile  fork.c  fuck.c  hello.c
usrsrc/tests/heirloom-sh/: defs.h
usrsrc/tests/lisp/: lisp.c
usrsrc/tests/old/: hello.c  test.cpp  test2.cpp
(+104 files in other folders)
